[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tubechallenge"
version = "0.1.0-alpha.1"
description = "Tube Challenge Route Finder"
authors = [
    {name = "Hassan Chagani"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119",
    "jsonschema>=4.0",
    "numba>=0.63",
    "numpy>=2.3",
    "pydantic>=2.12",
    "requests>=2.31",
    "scipy>=1.13",
    "SQLAlchemy>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest",
]

[project.scripts]
tubechallenge = "tubechallenge.main:main"

[tool.setuptools.packages.find]
where = ["."]
